K8S/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: csmvck8s-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: microservices
