K8S/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service-deployment
  namespace: csmvck8s-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service-api
  template:
    metadata:
      labels:
        app: gateway-service-api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: gateway-service-api
        image: ozanalcanoglu/cs-gateway-service:latest
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service-api
  namespace: csmvck8s-ns
spec:
  selector:
    app: gateway-service-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
