K8S/prometheus.yaml
# prometheus-deployment.yaml - GÜNCELLE
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: csmvck8s-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus  # ← BU SATIRI EKLE
      containers:
      - name: prometheus
        image: prom/prometheus:latest
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: prometheus-config
          mountPath: /etc/prometheus
      volumes:
      - name: prometheus-config
        configMap:
          name: prometheus-config
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: csmvck8s-ns
spec:
  selector:
    app: prometheus
  ports:
  - port: 9090
    targetPort: 9090
